--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libqbit-application-model-multistate-db-perl (0.003) raring; urgency=low
+
+  * Update DB.pm
+
+ -- Sergei Svistunov <sergei-svistunov@yandex.ru>  Fri, 06 Dec 2013 15:19:26 +0400
+
 libqbit-application-model-multistate-db-perl (0.002) raring; urgency=low
 
   * Fixed bug with lock
