--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libqbit-application-model-multistate-db-perl (0.004) raring; urgency=low
+
+  * Remove ARRAY primary key recognition.
+
+  * Allow to change getting method in childrens.
+
+ -- Sergei Svistunov <sergei-svistunov@yandex.ru>  Tue, 11 Feb 2014 12:43:03 +0400
+
 libqbit-application-model-multistate-db-perl (0.003) raring; urgency=low
 
   * Update DB.pm
