--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtertiusqbit-application-model-multistate-db-perl (0.005) raring; urgency=low
+
+  * Rename debian package
+
+ -- Dmitry Lukiyanchuk <tertius@yandex-team.ru>  Fri, 17 Apr 2015 17:57:45 +0300
+
 libtertiusqbit-application-model-multistate-db-perl (0.004) raring; urgency=low
 
   * Remove ARRAY primary key recognition.
