--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtertiusqbit-application-model-multistate-db-perl (0.006) raring; urgency=low
+
+  * Allow to redefine action log record.
+
+ -- Dmitry Lukiyanchuk <tertius@yandex-team.ru>  Mon, 06 Jul 2015 21:02:15 +0300
+
 libtertiusqbit-application-model-multistate-db-perl (0.005) raring; urgency=low
 
   * Rename debian package
