--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtertiusqbit-application-model-multistate-db-perl (0.007) raring; urgency=low
+
+  * Don't put file content to action log.
+
+ -- Dmitry Lukiyanchuk <tertius@yandex-team.ru>  Wed, 15 Jul 2015 17:32:53 +0300
+
 libtertiusqbit-application-model-multistate-db-perl (0.006) raring; urgency=low
 
   * Allow to redefine action log record.
